samples/_failures_safe/1761355063_a115bb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_43b99923.c: In function ‘analyze_text’:
./samples/SAFE/__tmp_43b99923.c:148:5: error: expected expression at end of input
  148 |     if (result == NULL || input == NULL)
      |     ^~
./samples/SAFE/__tmp_43b99923.c:148:5: error: expected declaration or statement at end of input
